# agenteval

./: LICENSE  README.md  agenteval.py  index.html  pyproject.toml
examples/: coding-assistant-tests.yaml  coding-assistant-transcript.json  customer-support-tests.yaml  customer-support-transcript.json  customer-support-transcript.txt  sales-bot-tests.yaml  sales-bot-transcript-bad.json  sales-bot-transcript-good.json
tests/: self-test-transcript.json  self-test.yaml
